apply plugin: 'idea'
apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

repositories {
    mavenCentral()
    maven {
        url 'http://nexus.ailis.de/content/groups/public'
    }
}

dependencyManagement {
    imports {
        mavenBom 'software.amazon.awssdk:bom:2.0.0-preview-8'
    }
}

buildscript {
    ext {
        springBootVersion = '1.5.8.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
        classpath('io.spring.gradle:dependency-management-plugin:1.0.3.RELEASE')
        classpath('com.netflix.nebula:gradle-extra-configurations-plugin:3.2.0')
    }
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

configurations {
    boot.extendsFrom compile
}

dependencies {
    compile(
            'org.springframework.boot:spring-boot-starter-web',
            'com.amazonaws:aws-java-sdk-lex:1.11.285'
//            'software.amazon.awssdk:core',
//            'software.amazon.awssdk:utils',
//            'software.amazon.awssdk:apache-client',
//            'software.amazon.awssdk:cognitoidentity',
//            'software.amazon.awssdk:lambda',
//            'software.amazon.awssdk:lexmodelbuilding:2.0.0-preview-8',
//            'software.amazon.awssdk:config',
    )

    runtime('org.hsqldb:hsqldb:2.3.2')

    testCompile(
            'org.springframework.boot:spring-boot-starter-test'
    )
}

bootRun {
    jvmArgs = ['-XX:MaxPermSize=128M']
    systemProperties System.properties
}

sourceSets {
    test {
        java {
            srcDir 'src/test/common/java'
            srcDir 'src/test/unit/java'
            srcDir 'src/test/intg/java'
        }
        resources {
            srcDir 'src/test/intg/resources'
        }
    }
}

task wrapper(type: Wrapper) {
    gradleVersion = '4.2.1'
}

afterEvaluate {
    idea.project {
        jdkName = '1.8'
        languageLevel = '1.8'
        ipr {
            withXml {
                it.node.component.find { it.@name == 'VcsDirectoryMappings' }.mapping.@vcs = "Git"
            }
        }
    }
}
